# testdesiderata

./: .coverage  .pre-commit-config.yaml  README.md  llms.txt  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
.skills/testdesiderata/: SKILL.md
docs/: explanation.md  how-to.md  index.md  reference.md  rules.md  tutorial.md
src/testdesiderata/: agent.py  cli.py  config.py  linter.py  mcp_server.py  models.py  timing.py
src/testdesiderata/rules/: __init__.py  automated.py  base.py  behavioral.py  composable.py  deterministic.py  fast.py  isolated.py  predictive.py  readable.py  specific.py  structure_insensitive.py
tests/: test_agent.py  test_config.py  test_rules.py  test_timing.py
